fix for csv read

--- a/Grupo Macri/PASO19.ipynb
+++ b/Grupo Macri/PASO19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
     }
    ],
    "source": [
-    "PASO19 = pd.read_csv (r'/Users/Josefina/Desktop/met4op/dataset/elecciones_2019/resultados/120819-054029/datos_agrup.csv')\n",
+    "PASO19 = pd.read_csv (r'/Users/tomasfuchs/met4op/dataset/elecciones_2019/resultados/120819-054029/datos_agrup.csv')\n",
     "PASO19\n"
    ]
   },
@@ -3044,7 +3044,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_in = PASO19\n",
+    "JUNTOS19 = (\n",
+    "    df_in\n",
+    "    .loc[ df_in.NOMBRE_AGRUPACION.isin(['JUNTOS POR EL CAMBIO']), ['NOMBRE_AGRUPACION','NOMBRE_CATEGORIA','VOTOS_AGRUPACION','NOMBRE_REGION']]\n",
+    "    .groupby(['NOMBRE_AGRUPACION','NOMBRE_REGION','NOMBRE_CATEGORIA'])\n",
+    "    .describe()\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
